WIP. Fix the issue as the test was not working
Signed-off-by: Charles Moulliard <cmoulliard@ibm.com>